# Sprout

./: .gitignore  .gitmodules  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  Dependencies.lua  GenerateProject.bat  INSTALL.vcxproj  INSTALL.vcxproj.filters  LICENSE  README.md  Sprout.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  premake5.lua
Sandbox/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  Sandbox.sln  Sandbox.vcxproj  Sandbox.vcxproj.filters  cmake_install.cmake  imgui.ini  premake5.lua
Sandbox/assets/shaders/: Texture.glsl  Texture.hlsl
Sandbox/src/: SandboxApp.cpp
Sprout/: CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  Sprout.vcxproj  Sprout.vcxproj.filters  cmake_install.cmake  cpp.hint  imgui.vcxproj  imgui.vcxproj.filters  premake5.lua
Sprout/src/: Sprout.h  spch.h
Sprout/src/Platform/DirectX11/: DX11Buffer.cpp  DX11Buffer.h  DX11ConstantBuffer.cpp  DX11ConstantBuffer.h  DX11Context.cpp  DX11Context.h  DX11ImGuiBackend.cpp  DX11ImGuiBackend.h  DX11InputLayout.cpp  DX11InputLayout.h  DX11RendererAPI.cpp  DX11RendererAPI.h  DX11Shader.cpp  DX11Shader.h  DX11Texture.cpp  DX11Texture.h  DX11VertexArray.cpp  DX11VertexArray.h
Sprout/src/Platform/DirectX12/: DX12Context.cpp  DX12Context.h  DX12ContextInternal.cpp  DX12ContextInternal.h  DX12ImGuiBackend.cpp  DX12ImGuiBackend.h  DX12RendererAPI.cpp  DX12RendererAPI.h
Sprout/src/Platform/FakeRenderer/: FakeRendererAPI.cpp  FakeRendererAPI.h
Sprout/src/Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLConstantBuffer.cpp  OpenGLConstantBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLImGuiBackend.cpp  OpenGLImGuiBackend.h  OpenGLInputLayout.cpp  OpenGLInputLayout.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
Sprout/src/Platform/Windows/: SSDLInput.cpp  SSDLWindow.cpp  SSDLWindow.h  WinInput.cpp  WinWindow.cpp  WinWindow.h
Sprout/src/Sprout/Core/: App.cpp  App.h  Assert.h  CLISystem.cpp  CLISystem.h  Collections.h  Core.h  EntryPoint.h  EnumUtils.h  HashUtils.h  Identifier.h  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MacroUtils.h  PlatformDetection.h  StringUtils.h  Timestep.h  Types.h  Window.h
Sprout/src/Sprout/CoreEvents/: CoreEvent.h  KeyEvent.h  MouseEvent.h  WinEvent.h
Sprout/src/Sprout/FileSystem/: FileUtils.cpp  FileUtils.h
Sprout/src/Sprout/ImGui/: ImGuiBackend.cpp  ImGuiBackend.h  ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h
Sprout/src/Sprout/Input/: Input.h  KeyCode.h  MouseCode.h
Sprout/src/Sprout/Math/: Enumerations.h
Sprout/src/Sprout/Renderer/: Buffer.cpp  Buffer.h  Camera.h  ConstantBuffer.cpp  ConstantBuffer.h  InputLayout.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.cpp  RendererAPI.h  RendererContext.cpp  RendererContext.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
Sprout/src/Sprout/Scene/: CameraController.cpp  CameraController.h
SproutTests/: premake5.lua
SproutTests/src/: CollectionTests.cpp  TestSetup.cpp
